--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+
 /tmp
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
 
+#environment file
+/src/environments/environment.prod.ts
 # dependencies
 /node_modules
 
