--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
   - "./node_modules"
 before_install:
   - echo $super_secret_password | gpg --passphrase-fd 0 src/environments/environment.prod.ts.gpg
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 install:
 - npm install
 script:
